--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: Drive
+    name: zoi-drive
   datasource:
     url: jdbc:postgresql://localhost:5432/drive
     username: postgres
