update：实现文件上传后计入已用空间，修改记录存储空间的数据类型由numeric修改为int8以及更正涉及该变动的代码

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -35,7 +35,7 @@ server:
   port: 9088
   system:
     endpoint: http://localhost:9088
-    default-storage: 1000.00
+    default-storage: 1048576000
 
 sa-token:
   token-name: Token
