--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,10 @@
             <artifactId>java-otp</artifactId>
             <version>0.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <profiles>
